--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +35,31 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+body{
+  background-color: rgb(238, 224, 199);
+}
+.contain{
+  border: 6px solid none;
+  border-radius: 50px;
+  margin-top:100px;
+  margin-left: 400px;
+  margin-right: 400px;
+  
+  padding: 30px;
+  background-image: linear-gradient(gray,rgb(13, 13, 97));
+  color: rgb(204, 199, 204);
+}
+.btn{
+  text-align: center;
+  margin-left: 250px;
+  padding: 15px;
+  padding-left: 20px;
+  padding-right: 20px;
+  border-radius: 15px;
+}
+h1{
+  color: rgb(9, 31, 92);
+  text-align: center;
 }
